--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 
 body {
   font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 div {
@@ -36,4 +37,34 @@ button {
 div li button {
   margin: 0 15px;
   background: #ca4949;
+}
+
+#form-repo {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+}
+
+#form-repo .form-group {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+}
+
+.form-group label {
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 28px;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 8px 16px;
+  outline: none;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+}
+
+.form-group input:focus {
+  border-color: #7159c1;
 }
